In ExportWorksheetDialog: 1. show the file filter in the OpenFileDialog according to the selected output format 2. don't crash if PNG was selected.

BUG: 386883
FIXED-IN: 2.5