src/kdefrontend/worksheet/ExportWorksheetDialog.cpp
@@ -69,7 +69,7 @@ ExportWorksheetDialog::ExportWorksheetDialog(QWidget* parent) : QDialog(parent),
 
 	ui->bOpen->setIcon(QIcon::fromTheme("document-open"));
 
-	ui->cbFormat->addItem(QIcon::fromTheme("application-pdf"), "Portable data format (PDF)");
+	ui->cbFormat->addItem(QIcon::fromTheme("application-pdf"), "Portable Data Format (PDF)");
 	ui->cbFormat->addItem(QIcon::fromTheme("image-svg+xml"), "Scalable Vector Graphics (SVG)");
 	ui->cbFormat->insertSeparator(3);
 	ui->cbFormat->addItem(QIcon::fromTheme("image-x-generic"), "Portable Network Graphics (PNG)");
@@ -220,7 +220,16 @@ void ExportWorksheetDialog::toggleOptions() {
 void ExportWorksheetDialog::selectFile() {
 	KConfigGroup conf(KSharedConfig::openConfig(), "ExportWorksheetDialog");
 	const QString dir = conf.readEntry("LastDir", "");
-	const QString path = QFileDialog::getOpenFileName(this, i18n("Export to file"), dir);
+
+	QString format;
+	if (ui->cbFormat->currentIndex() == 0)
+		format = i18n("Portable Data Format (PDF) (*.pdf *.PDF)");
+	else if (ui->cbFormat->currentIndex() == 1)
+		format = i18n("Scalable Vector Graphics (SVG) (*.svg *.SVG)");
+	else
+		format = i18n("Portable Network Graphics (PNG) (*.png *.PNG)");
+
+	const QString path = QFileDialog::getOpenFileName(this, i18n("Export to file"), dir, format);
 	if (!path.isEmpty()) {
 		ui->leFileName->setText(path);
 
@@ -237,12 +246,12 @@ void ExportWorksheetDialog::selectFile() {
 	called when the output format was changed. Adjusts the extension for the specified file.
  */
 void ExportWorksheetDialog::formatChanged(int index) {
-	//we have a separator in the format combobox at the 4th posiiton -> skip it
-	if (index > 3)
+	//we have a separator in the format combobox at the 3rd posiiton -> skip it
+	if (index > 2)
 		index --;
 
 	QStringList extensions;
-	extensions<<".pdf"<<".eps"<<".svg"<<".png";
+	extensions << ".pdf" << ".svg" << ".png";
 	QString path = ui->leFileName->text();
 	int i = path.indexOf(".");
 	if (i == -1)
